 Copyright (c) 2008 Nabeel Shahzad
 For more information, visit www.phpvms.net
	Forums: http://www.phpvms.net/forum
	Documentation: http://www.phpvms.net/docs

 phpVMS is licenced under the following license:
   Creative Commons Attribution Non-commercial Share Alike (by-nc-sa)
   View license.txt in the root, or visit:
		http://creativecommons.org/licenses/by-nc-sa/3.0/
---

Build Changelog:


Build 352 "Skoshi Tiger"

	* (Admin) Custom fields can now be added into PIREPS
	* (Admin) "View details" link on PIREP
	* Added flight queue/bid feature
	* PIREP report page reorganized, shows additional fields
	* Contact, Live Map removed for now (Will be re-added)

Notes:
	Run the following queries for an update (replace the phpvms_ with
		your table prefix, if it's different)

	CREATE TABLE `phpvms_pirepfields` (
		`fieldid` INT NOT NULL AUTO_INCREMENT ,
		`title` VARCHAR( 25 ) NOT NULL ,
		`name` VARCHAR( 25 ) NOT NULL ,
		PRIMARY KEY ( `fieldid` )
		UNIQUE KEY `name` (`name`)
	) ENGINE = INNODB; 
	
	CREATE TABLE `phpvms_pirepvalues` (
		`id` INT NOT NULL AUTO_INCREMENT ,
		`fieldid` INT NOT NULL ,
		`pirepid` INT NOT NULL ,
		`value` VARCHAR( 50 ) NOT NULL ,
		PRIMARY KEY ( `id` ),
		FOREIGN KEY (`fieldid`) REFERENCES phpvms_pirepfields(`fieldid`) ON DELETE CASCADE,
		FOREIGN KEY (`pirepid`) REFERENCES phpvms_pireps(`pirepid`) ON DELETE CASCADE
	) ENGINE=INNODB;

	CREATE TABLE `phpvms_bids` (
		`bidid` INT NOT NULL AUTO_INCREMENT ,
		`pilotid` int(11) NOT NULL default '0',
		`routeid` int(11) NOT NULL default '0',
		PRIMARY KEY ( `id` )
		FOREIGN KEY (`pilotid`) REFERENCES phpvms_pilots(`pilotid`) ON DELETE CASCADE,
		FOREIGN KEY (`routeid`) REFERENCES phpvms_schedules(`id`) ON DELETE CASCADE
	) ENGINE = INNODB; 
	

Build 340 "Top of Descent"

  * Clean URLs implemented
  * Set Google Map type (See Notes)
  * Pilot ranks are updated on PIREP accept
  * Schedule distance properly saved/displayed
  * Schedule listing shows airport name with ICAO on default